<resources>
    <string name="app_name">SimpleNews</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">CNN * 9 hours ago</string>
    <string name="title">title</string>
    <string name="body">body</string>
    <string name="wed_12_sep_2018">Wed, 12 Sep 2018</string>
    <string name="lisa_lauren_mike">Lisa, Lauren, Mike</string>
    <string name="keyword_search">search</string>
    <string name="keyword">keyword</string>
    <string name="account">Account</string>
    <string name="favorites">Favorites</string>
    <string name="home">Home</string>
</resources>