<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/_16dp"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/_5dp"
    android:layout_height="@dimen/_350dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/test"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/upper_portion"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_0dp"
            android:background="@color/light_pink"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <TextView
                android:layout_width="@dimen/_0dp"
                android:layout_height="@dimen/_50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:background="@color/white"
                android:alpha="0.7"
                android:text="@string/lisa_lauren_mike"
                android:id="@+id/tv_author_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_published_time"/>
            <TextView
                android:layout_width="@dimen/_0dp"
                android:layout_height="@dimen/_50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:background="@color/white"
                android:alpha="0.7"
                android:text="@string/wed_12_sep_2018"
                android:id="@+id/tv_published_time"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_author_name"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_0dp"
            app:layout_constraintVertical_weight="2"
            app:layout_constraintTop_toTopOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/_16dp"
            android:text="@string/title"
            android:textStyle="bold"
            android:textSize="@dimen/_20sp"/>

        <TextView
            android:id="@+id/tv_body"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_0dp"
            app:layout_constraintVertical_weight="8"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_publisher"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginEnd="@dimen/_16dp"
            android:layout_marginTop="@dimen/_5dp"
            android:text="@string/body"/>
        <TextView
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_0dp"
            android:id="@+id/tv_publisher"
            android:layout_marginStart="@dimen/_16dp"
            app:layout_constraintVertical_weight="3"
            app:layout_constraintHorizontal_weight="10"
            app:layout_constraintTop_toBottomOf="@id/tv_body"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_save_to_favorite"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/category"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save_to_favorite"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_50dp"
            android:background="@drawable/favorite_false"
            android:elevation="@dimen/_20dp"
            android:padding="@dimen/_5dp"
            android:layout_marginBottom="@dimen/_16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_publisher"
            app:layout_constraintTop_toBottomOf="@id/tv_body" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>